fixed the z-indexing issues

--- a/styles/shared.css
+++ b/styles/shared.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
@@ -13,6 +14,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1;
 }
 
 .main-header > div {
@@ -116,6 +118,7 @@ body {
   background: white;
   color: #0e4f1f;
 }
-.button:hover {
+
+.button:focus {
   outline: none;
 }
