--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,23 @@
-* {
-  box-sizing: border-box;
-}
-body {
-  font-family: "Montserrat", sans-serif;
-  margin: 0;
-}
-
 #product-overview {
   background: url("../images/freedom.jpg");
   width: 100%;
   height: 528px;
   padding: 10px;
+  margin-top: 43px;
+  position: relative;
+}
+
+.section-title {
+  color: #2ddf5c;
+  text-align: center;
 }
 
 #product-overview h1 {
   color: white;
   font-family: "Anton", sans-serif;
+  position: absolute;
+  bottom: 5%;
+  left: 3%;
 }
 
 .plan__list {
@@ -43,6 +45,7 @@ body {
 .plan__annotation {
   background: #fff;
   color: #19b84c;
+  padding: 8px;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
   border-radius: 8px;
 }
@@ -111,9 +114,4 @@ body {
   display: inline-block;
   width: 30%;
   vertical-align: top;
-}
-
-.section-title {
-  color: #2ddf5c;
-  text-align: center;
 }
